--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -3,9 +3,10 @@ NAME =  Polymorphism
 SRC_DIR = src/
 
 SRC_FILES =  main.cpp \
-			Animal.cpp \
+			AAnimal.cpp \
 			Cat.cpp \
-			Dog.cpp
+			Dog.cpp \
+			Brain.cpp
 
 SRC         =   $(addprefix $(SRC_DIR), $(SRC_FILES))
 OBJ_DIR		=	objs/
